--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                 <h4>GNSS Smart Antennas </h4>
                 <p>CHCNAV 173+</p>
                 <a href="assets/img/masonry-portfolio/CHCNAV i73+.png" title="CHCNAV 173+" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="CHCNAVi73+.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="./CHCNAVi73+" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -465,7 +465,7 @@
                 <h4>GNSS Smart Antennas </h4>
                 <p>CHCNAV i76</p>
                 <a href="assets/img/masonry-portfolio/CHCNAV i76.png" title="CHCNAV i76" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="CHCNAVi76.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="./CHCNAVi76" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -475,7 +475,7 @@
                 <h4>GNSS Smart Antennas </h4>
                 <p>CHCNAV i89</p>
                 <a href="assets/img/masonry-portfolio/CHCNAV i89.png" title="CHCNAV i89" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="CHCNAVi89.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="./CHCNAVi89" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -485,7 +485,7 @@
                 <h4>GNSS Smart Antennas </h4>
                 <p>CHCNAV iBASE</p>
                 <a href="assets/img/masonry-portfolio/CHCNAV iBASE.png" title="CHCNAV iBASE" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="CHCNAViBASE.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="./CHCNAViBASE" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
             <!-- GNSS Smart Antennas end -->
@@ -498,7 +498,7 @@
                 <h4>Controllers & Tablets </h4>
                 <p>CHCNAV LT60H</p>
                 <a href="assets/img/masonry-portfolio/CHCNAV LT60H.png" title="CHCNAV LT60H" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="CHCNAVLT60H.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="./CHCNAVLT60H" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -508,7 +508,7 @@
                 <h4>Controllers & Tablets </h4>
                 <p>CHCNAV LT800</p>
                 <a href="assets/img/masonry-portfolio/CHCNAV LT800.png" title=" CHCNAV LT800" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="CHCNAVLT800.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="./CHCNAVLT800" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -518,7 +518,7 @@
                 <h4>Controllers & Tablets </h4>
                 <p>CHCNAV LT800H</p>
                 <a href="assets/img/masonry-portfolio/CHCNAV LT800H.png" title="CHCNAV LT800H" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="CHCNAVLT800H.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="./CHCNAVLT800H" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -528,7 +528,7 @@
                 <h4>Controllers & Tablets </h4>
                 <p>CHCNAV HCE600</p>
                 <a href="assets/img/masonry-portfolio/CHCNAV HCE600.png" title="CHCNAV HCE600" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="CHCNAVHCE600.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="./CHCNAVHCE600" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
             <!-- Controllers & Tablets end -->
@@ -541,7 +541,7 @@
                 <h4>Surveying & Mapping Software</h4>
                 <p>CHCNAV LandStar</p>
                 <a href="assets/img/masonry-portfolio/CHCNAV LandStar.png" title="CHCNAV LandStar" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="CHCNAVLandStar.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="./CHCNAVLandStar" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -551,7 +551,7 @@
                 <h4>Surveying & Mapping Software</h4>
                 <p>CHCNAV CGO</p>
                 <a href="assets/img/masonry-portfolio/CHCNAV CGO.png" title="CHCNAV CGO" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="CHCNAVCGO.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="./CHCNAVCGO" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -561,7 +561,7 @@
                 <h4>Surveying & Mapping Software</h4>
                 <p>CHCNAV MapCloud</p>
                 <a href="assets/img/masonry-portfolio/CHCNAV MapCloud.png" title="CHCNAV MapCloud" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="CHCNAVMapCloud.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="./CHCNAVMapCloud" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -571,7 +571,7 @@
                 <h4>Surveying & Mapping Software</h4>
                 <p>CHCNAV CGBAS</p>
                 <a href="assets/img/masonry-portfolio/CHCNAV CGBAS.png" title=" CHCNAV CGBAS" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="CHCNAVCGBAS.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="./CHCNAVCGBAS" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
             <!-- Surveying & Mapping Software end -->
@@ -586,7 +586,7 @@
                 <h4>Total Stations start</h4>
                 <p>CHCNAV CTS-112R4</p>
                 <a href="assets/img/masonry-portfolio/CHCNAV CTS-112R4.png" title="CHCNAV CTS-112R4" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="CHCNAVCTS-112R4.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="./CHCNAVCTS-112R4" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -596,7 +596,7 @@
                 <h4>Total Stations start</h4>
                 <p>CHCNAV CTS-A100</p>
                 <a href="assets/img/masonry-portfolio/CHCNAV CTS-A100.png" title="CHCNAV CTS-A100" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="CHCNAVCTS-A100.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="./CHCNAVCTS-A100" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
             <!-- Total Stations end -->
@@ -611,7 +611,7 @@
                 <h4>3D Mobile Mapping</h4>
                 <p>CHCNAV RS10</p>
                 <a href="assets/img/masonry-portfolio/CHCNAV RS10.png" title=" CHCNAV RS10" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="CHCNAVRS10.html"More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="./CHCNAVRS10" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
             <!-- Handheld Laser Scanners end -->
@@ -622,7 +622,7 @@
                 <h4>3D Mobile Mapping</h4>
                 <p>CHCNAV AlphaAir 10</p>
                 <a href="assets/img/masonry-portfolio/airborne- LiDAR-systems-chcnav-AA10.png" title=" CHCNAV RS10" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="alphaair10.html"More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="./alphaair10" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
             <!-- Handheld Laser Scanners end -->
@@ -638,7 +638,7 @@
                 <h4>Software</h4>
                 <p>CHCNAV CoPre</p>
                 <a href="assets/img/masonry-portfolio/CHCNAV CoPre.png" title="CHCNAV CoPre" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="CHCNAVCoPre.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="./CHCNAVCoPre" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -648,7 +648,7 @@
                 <h4>Software</h4>
                 <p>CHCNAV CoProcess</p>
                 <a href="assets/img/masonry-portfolio/CHCNAV CoProcess.png" title="CHCNAV CoProcess" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="CHCNAVCoProcess.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="./CHCNAVCoProcess" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -666,7 +666,7 @@
                 <h4>Marine Surveying</h4>
                 <p>CHCNAV Apache 3</p>
                 <a href="assets/img/masonry-portfolio/CHCNAV Apache 3.png" title="CHCNAV Apache 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="CHCNAVApache3.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="./CHCNAVApache3" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
             <!-- USV Platforms end -->
@@ -679,7 +679,7 @@
                 <h4>Hydrographic Sensors</h4>
                 <p>CHCNAV D270</p>
                 <a href="assets/img/masonry-portfolio/CHCNAV D270.png" title="CHCNAV D270" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="CHCNAVD270.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="./CHCNAVD270" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -689,7 +689,7 @@
                 <h4>Hydrographic Sensors</h4>
                 <p>CHCNAV D390</p>
                 <a href="assets/img/masonry-portfolio/CHCNAV D390.png" title="CHCNAV D390" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="CHCNAVD390.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="./CHCNAVD390" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
             <!-- Hydrographic Sensors end --> 
