--- a/services-inquiry.html
+++ b/services-inquiry.html
@@ -267,14 +267,8 @@
 
       <!-- Display Image for Ads -->
       <div class="col-lg-6">
-        <iframe 
-          src="https://www.youtube.com/embed/OoEfO6tYBS8?start=7&autoplay=1&mute=1&controls=0&modestbranding=1&showinfo=0&rel=0" 
-          style="width: 100%; height: auto; aspect-ratio: 16/9; border: 2px solid #ccc;" 
-          frameborder="0" 
-          allow="autoplay; encrypted-media" 
-          allowfullscreen>
-        </iframe>
-      </div><!-- End Video Embed -->
+        <img src="assets/img/ads/ads.jpg" alt="CHCNAV Ads" style="width: 100%; height: auto; border: 2px solid #ccc;">
+      </div><!-- End Ads Image -->
 
     </div>
 
