--- a/about.html
+++ b/about.html
@@ -284,32 +284,36 @@
         </div>
       </div><!-- End Tab Content Item -->
 
-      <div class="tab-pane fade" id="features-tab-2">
-        <div class="row">
-          <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
+     <div class="tab-pane fade" id="features-tab-2">
+  <div class="row">
+    <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
+      <p>
+        We are thrilled to announce that we have been recognized as CHCNAV’s Platinum Dealer of the Year! 
+        This prestigious award is a testament to our dedication, expertise, and commitment to delivering 
+        top-tier geospatial and navigation solutions to our valued customers.
+      </p>
+      <p>
+        A huge thank you to CHCNAV for this incredible recognition and to our amazing team and loyal customers 
+        for their continuous support. We look forward to pushing boundaries, driving innovation, and achieving 
+        even greater milestones together!
+      </p>
+      <p>
+        Here’s to another year of excellence and success! 🚀🎉
+      </p>
+      <ul>
+        <li><i class="bi bi-check2-all"></i> <span>#CHCNAV</span></li>
+        <li><i class="bi bi-check2-all"></i> <span>#PlatinumDealer</span></li>
+        <li><i class="bi bi-check2-all"></i> <span>#AwardWinning</span></li>
+        <li><i class="bi bi-check2-all"></i> <span>#Innovation</span></li>
+        <li><i class="bi bi-check2-all"></i> <span>#GeospatialExcellence</span></li>
+      </ul>
+    </div>
+    <div class="col-lg-6 order-1 order-lg-2 text-center">
+      <img src="assets/img/platinum_award.jpg" alt="CHCNAV Platinum Dealer Award" class="img-fluid">
+    </div>
+  </div>
+</div><!-- End Tab Content Item -->
 
-            <p>
-              Delivering innovative and reliable solutions designed to meet the unique challenges of marine surveying and navigation. Our cutting-edge technologies and services empower professionals in the marine industry to achieve precision and efficiency.
-            </p>
-          
-            <ul>
-              <li><i class="bi bi-check2-all"></i> <span>Hydrographic Survey Systems: Accurate underwater mapping for seamless data collection.</span></li>
-              <li><i class="bi bi-check2-all"></i> <span>Marine Navigation Tools: Reliable solutions for safe and efficient maritime operations.</span></li>
-              <li><i class="bi bi-check2-all"></i> <span>Coastal Management Support: Innovative tools for sustainable coastal development and monitoring.
-              </span></li>
-              <p>
-                Whether for research, navigation, or infrastructure development, our marine solutions ensure accuracy, reliability, and excellence in every operation.
-
-
-              </p>
-
-            </ul>
-          </div>
-          <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/platinum_award.jpg" alt="" class="img-fluid">
-          </div>
-        </div>
-      </div><!-- End Tab Content Item -->
 
       <div class="tab-pane fade" id="features-tab-3">
         <div class="row">
