--- a/CHCNAVi89.html
+++ b/CHCNAVi89.html
@@ -224,7 +224,7 @@
           <!-- Text Content (Left) -->
           <div class="col-lg-6 col-md-12 order-2 order-lg-1 mt-3 mt-lg-0">
             <p class="fst-italic" style="font-size: 18px; color: #555; line-height: 1.6;">
-              The i76 Palm Visual RTK is a lightweight receiver combining GNSS, IMU, and dual cameras. Weighing just 450g and IP68-rated, it maintains a 96% fixed rate even in areas with high solar activity. Its CAD AR visual stakeout enables precise path planning, while the 5th Gen Ultra-IMU ensures accuracy even at a 60° tilt. With over 17 hours of battery life, the i76 offers precision and adaptability for professionals seeking precision and adaptability.
+              The i89 is a compact yet powerful surveying tool with a 1408-channel GNSS module that enhances RTK performance in challenging conditions. Its advanced ionospheric modeling ensures reliable RTK fixes, even during high solar activity. With 16.5 hours of battery life and a lightweight 750 g design, the i89 delivers efficiency and ease for daily surveying tasks.
 
 
             </p>
