--- a/CHCNAVCTS-A100.html
+++ b/CHCNAVCTS-A100.html
@@ -185,7 +185,7 @@
       <!-- Text Content on Left Side -->
       <div class="col-lg-6 col-md-12">
         <div class="portfolio-info">
-          <h4 class="mb-3" style="font-size: 30px; font-weight: bold;">CHCNAV RS10</h4>
+          <h4 class="mb-3" style="font-size: 30px; font-weight: bold;">CHCNAV CTS-A100</h4>
           <p style="font-size: 18px; color: #555;">Android-Powered Total Station for Surveying and Engineering</p>
           
           <!-- Send Inquiry Button -->
