--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
               <div class="portfolio-info">
                 <h4>3D Mobile Mapping</h4>
                 <p>CHCNAV AlphaAir 10</p>
-                <a href="assets/img/masonry-portfolio/airborne- LiDAR-systems-chcnav-AA10.png" title=" CHCNAV RS10" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/masonry-portfolio/airborne- LiDAR-systems-chcnav-AA10.png" title=" CHCNAV AlphaAir 10" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="./alphaair10" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
